// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditEntry renders FieldPreview for CheckBox 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School Mark
    </label>
    <ul>
      <li>
        Logo A
      </li>
      <li>
        Logo B
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for Date 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School Date
    </label>
    <span
      class="d-block"
    >
      12/23/2020
    </span>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for DocumentLibrary 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School Register
    </label>
    <div
      class="data-record-document-field mb-2 btn-group"
      role="group"
    >
      <button
        class="btn btn-secondary"
        data-tooltip-align="bottom"
        data-tooltip-delay="200"
        title="file-preview"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-document-default mr-2"
          role="presentation"
        >
          <use
            xlink:href="#document-default"
          />
        </svg>
        school_photo.jpg
      </button>
      <button
        class="btn btn-monospaced btn-secondary"
        data-tooltip-align="bottom"
        data-tooltip-delay="200"
        title="download"
        type="button"
      >
        <svg
          class="lexicon-icon lexicon-icon-download"
          role="presentation"
        >
          <use
            xlink:href="#download"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for Number 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School Number
    </label>
    <span
      class="d-block"
    >
      1234
    </span>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for Radio 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School Option
    </label>
    <span
      class="d-block"
    >
      Option A, Option B
    </span>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for Section 1`] = `
<DocumentFragment>
  <div
    class="panel data-record-section"
    role="tablist"
  >
    <button
      aria-expanded="true"
      class="btn btn-unstyled panel-header panel-header-link collapse-icon collapse-icon-middle"
      role="tab"
    >
      <div
        class="sheet-section"
      >
        <div
          class="autofit-row sheet-subtitle"
        >
          <span
            class="autofit-col autofit-col-expand"
          >
            <label
              class="text-uppercase"
            >
              FieldSet Address
            </label>
          </span>
        </div>
      </div>
      <span
        class="collapse-icon-closed"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-right"
          role="presentation"
        >
          <use
            xlink:href="#angle-right"
          />
        </svg>
      </span>
      <span
        class="collapse-icon-open"
      >
        <svg
          class="lexicon-icon lexicon-icon-angle-down"
          role="presentation"
        >
          <use
            xlink:href="#angle-down"
          />
        </svg>
      </span>
    </button>
    <div
      class="panel-collapse collapse show"
      role="tabpanel"
    >
      <div
        class="panel-body"
      >
        <b>
          Address CustomField
        </b>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for Select 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School Grade
    </label>
    <ul>
      <li>
        Grade A
      </li>
      <li>
        Grade B
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`EditEntry renders FieldPreview for Text 1`] = `
<DocumentFragment>
  <div
    class="data-record-field-preview"
  >
    <label>
      School
    </label>
    <span
      class="d-block"
    >
      Liferay School
    </span>
  </div>
</DocumentFragment>
`;
